<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:id="@+id/profile_leaf_background"
        android:layout_width="259dp"
        android:layout_height="313dp"
        android:layout_marginEnd="181dp"
        android:src="@drawable/gruppe_2937"
        app:layout_constraintEnd_toEndOf="@+id/text_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/mewsreaderbold"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_leaf"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="74dp"
        android:src="@drawable/gruppe_2940"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile" />

    <TextView
        android:id="@+id/text_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profile_username"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/determinateBar"
        app:layout_constraintStart_toEndOf="@+id/profile_leaf"
        app:layout_constraintTop_toBottomOf="@+id/text_profile" />

    <TextView
        android:id="@+id/text_joindate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlowregular"
        android:text="@string/username_joindate"
        android:textColor="@color/text"
        app:layout_constraintStart_toEndOf="@+id/profile_leaf"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_name" />

    <TextView
        android:id="@+id/text_profile_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/mewsreaderbold"
        android:text="@string/profile_week"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/determinateBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile" />

    <TextView
        android:id="@+id/text_earnedLeaves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/barlowregular"
        android:text="earned leaves"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_week" />

    <ImageView
        android:id="@+id/profile_graph"
        android:layout_width="418dp"
        android:layout_height="329dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/gruppe_2959"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_earnedLeaves" />

    <ImageView
        android:id="@+id/profile_weekdays_white"
        android:layout_width="330dp"
        android:layout_height="32dp"
        android:layout_marginTop="170dp"
        android:src="@drawable/wiederholungsraster_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_earnedLeaves" />

    <ImageView
        android:id="@+id/profile_friends_bg"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:src="@drawable/plusbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_profile_friends"
        app:layout_constraintTop_toBottomOf="@+id/text_joindate" />

    <TextView
        android:id="@+id/text_profile_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:fontFamily="@font/mewsreaderbold"
        android:text="@string/profile_friends"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_joindate" />

    <ImageView
        android:id="@+id/profile_plusBtn"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:src="@drawable/plusbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_profile_friends"
        app:layout_constraintTop_toBottomOf="@+id/text_joindate" />


    <ImageView
        android:id="@+id/profile_friendsBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/friends_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_friends" />

    <ImageView
        android:id="@+id/profile_leaf_friends1"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/gruppe_2940"
        app:layout_constraintStart_toStartOf="@+id/profile_friendsBG"
        app:layout_constraintTop_toTopOf="@+id/profile_friendsBG" />

</androidx.constraintlayout.widget.ConstraintLayout>